--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Videojuegos.loader.js";
+      var loaderUrl = buildUrl + "/exports.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Videojuegos.data",
-        frameworkUrl: buildUrl + "/Videojuegos.framework.js",
-        codeUrl: buildUrl + "/Videojuegos.wasm",
+        dataUrl: buildUrl + "/exports.data",
+        frameworkUrl: buildUrl + "/exports.framework.js",
+        codeUrl: buildUrl + "/exports.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "New Unity Project",
